Remove unnecessary stuff from poms. Update widgetset

--- a/AvaaWidgetSet/pom.xml
+++ b/AvaaWidgetSet/pom.xml
@@ -28,6 +28,11 @@
 			<version>0.1.4</version>
 		</dependency>
 		<dependency>
+   			<groupId>org.vaadin.addon</groupId>
+		   	<artifactId>v-leaflet</artifactId>
+		   	<version>1.0.0-b3</version>
+		</dependency>
+		<dependency>
 		   <groupId>org.vaadin.addons</groupId>
 		   <artifactId>filteringtable</artifactId>
 		   <version>0.9.11.v7</version>
