--- a/AvaaWidgetSet/pom.xml
+++ b/AvaaWidgetSet/pom.xml
@@ -23,11 +23,6 @@
 			<version>2.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.vaadin.addon</groupId>
-			<artifactId>v-ol3</artifactId>
-			<version>0.1.4</version>
-		</dependency>
-		<dependency>
    			<groupId>org.vaadin.addon</groupId>
 		   	<artifactId>v-leaflet</artifactId>
 		   	<version>1.0.0-b3</version>
@@ -36,6 +31,11 @@
 		   <groupId>org.vaadin.addons</groupId>
 		   <artifactId>filteringtable</artifactId>
 		   <version>0.9.14.v7</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.vaadin.addons</groupId>
+		    <artifactId>vaadin-combobox-multiselect</artifactId>
+		    <version>1.1.5</version>
 		</dependency>
 	</dependencies>
 </project>
